added react to kafka!