@@ -8,9 +8,16 @@ import com.example.chatservice.entity.ChatMessage;
 import com.example.chatservice.repository.ChatMemberRepository;
 import com.example.chatservice.service.ChatMessageService;
 import lombok.RequiredArgsConstructor;
+import org.apache.kafka.clients.producer.ProducerRecord;
 import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.stereotype.Service;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
+import reactor.kafka.sender.KafkaSender;
+import reactor.kafka.sender.SenderRecord;
+import reactor.util.retry.Retry;
 
+import java.time.Duration;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -18,8 +25,8 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 public class KafkaProducer {
-    private final KafkaTemplate<UUID, Message> messageKafkaTemplate;
-    private final KafkaTemplate<UUID, ReadReceipt> readReceiptKafkaTemplate;
+    private final KafkaSender<UUID, Message> kafkaSender;
+    private final KafkaSender<UUID, ReadReceipt> readReceiptKafkaSender;
     private final ChatMessageService chatMessageService;
     private final ChatMemberRepository chatMemberRepository;
 
@@ -30,11 +37,32 @@ public class KafkaProducer {
         List<UUID> participantIds = chatMemberRepository.findParticipantIdsByChatId(message.getChatId())
                 .stream()
                 .filter(id -> !id.equals(message.getSenderId()))
-                .collect(Collectors.toList());
-
-        for (UUID participantId : participantIds) {
-            messageKafkaTemplate.send("direct_messages", participantId, message);
-        }
+                .toList();
+        // Создаем поток сообщений для отправки
+        Flux<SenderRecord<UUID, Message, UUID>> records = Flux.fromIterable(participantIds)
+                .map(participantId ->
+                        SenderRecord.create(
+                                // topic, key (chatId для партиционирования), value (message)
+                                new ProducerRecord<>("direct_messages", message.getChatId(), toMessageDto(chatMessage)),
+                                participantId  // Correlation metadata (recipientId)
+                        )
+                );
+        // Отправляем сообщения асинхронно
+        kafkaSender.send(records)
+                .doOnError(e ->
+                        System.err.println("Error sending message to Kafka: " + e.getMessage())
+                )
+                .doOnComplete(() ->
+                        System.out.println("Successfully sent " + participantIds.size() + " messages")
+                )
+                .retryWhen(
+                        Retry.backoff(3, Duration.ofMillis(100))
+                                .doBeforeRetry(retrySignal -> {
+                                    System.out.println("Retry #" + retrySignal.totalRetries() +
+                                            " for message send. Error: " + retrySignal.failure().getMessage());
+                                })
+                )
+                .subscribe();
     }
 
     public void sendReadReceipt(ReadReceipt receipt) {
@@ -42,8 +70,16 @@ public class KafkaProducer {
         // Получаем отправителя сообщения из БД
         UUID senderId = chatMessageService.findById(receipt.getMessageId()).getSenderId();
 
-        // Отправляем уведомление отправителю
-        readReceiptKafkaTemplate.send("read_receipts", senderId, receipt);
+        SenderRecord<UUID, ReadReceipt, UUID> record = SenderRecord.create(
+                new ProducerRecord<>("read_receipts", senderId, receipt),
+                senderId
+        );
+
+        readReceiptKafkaSender.send(Mono.just(record))
+                .doOnError(e ->
+                        System.err.println("Error sending read receipt: " + e.getMessage())
+                )
+                .subscribe();
     }
 
     public void sendEditNotification(EditNotification notification) {
@@ -52,9 +88,24 @@ public class KafkaProducer {
                 .filter(id -> !id.equals(notification.getSenderId()))
                 .collect(Collectors.toList());
 
-        for (UUID participantId : participantIds) {
-            messageKafkaTemplate.send("direct_messages", participantId, notification.toMessage());
-        }
+        // Создаем поток сообщений для отправки
+        Flux<SenderRecord<UUID, Message, UUID>> records = Flux.fromIterable(participantIds)
+                .map(participantId ->
+                        SenderRecord.create(
+                                new ProducerRecord<>("direct_messages", notification.getChatId(), notification.toMessage()),
+                                participantId
+                        )
+                );
+
+        kafkaSender.send(records)
+                .doOnError(e ->
+                        System.err.println("Error sending edit notification: " + e.getMessage())
+                )
+                .doOnComplete(() ->
+                        System.out.println("Successfully sent " + participantIds.size() + " edit notifications")
+                )
+                .retryWhen(Retry.backoff(3, Duration.ofMillis(100)))
+                .subscribe();
     }
 
     public void sendParticipantNotification(ParticipantNotification notification) {
@@ -63,10 +114,34 @@ public class KafkaProducer {
                 .filter(id -> !id.equals(notification.getAdminId()))
                 .collect(Collectors.toList());
 
-        for (UUID participantId : participantIds) {
-            messageKafkaTemplate.send("direct_messages", participantId, notification.toMessage());
-        }
+        Flux<SenderRecord<UUID, Message, UUID>> records = Flux.fromIterable(participantIds)
+                .map(participantId ->
+                        SenderRecord.create(
+                                new ProducerRecord<>("direct_messages", notification.getChatId(), notification.toMessage()),
+                                participantId
+                        )
+                );
+
+        kafkaSender.send(records)
+                .doOnError(e ->
+                        System.err.println("Error sending participant notification: " + e.getMessage())
+                )
+                .doOnComplete(() ->
+                        System.out.println("Successfully sent " + participantIds.size() + " participant notifications")
+                )
+                .retryWhen(Retry.backoff(3, Duration.ofMillis(100)))
+                .subscribe();
     }
 
-
+    private Message toMessageDto(ChatMessage chatMessage) {
+        Message message = new Message();
+        message.setMessageId(chatMessage.getId());
+        message.setSenderId(chatMessage.getSenderId());
+        message.setChatId(chatMessage.getChatId());
+        message.setText(chatMessage.getText());
+        message.setTimestamp(chatMessage.getTimestamp());
+        message.setEdited(chatMessage.isEdited());
+        message.setStatus(chatMessage.getStatus());
+        return message;
+    }
 }
